2007-02-12 Murray Cumming  <murrayc@murrayc.com>

	* libgda/gda-query-field-value.c:
	(gda_query_field_value_get_is_parameter): Rename the function here, instead of just 
	renaming it in the header file, to fix the linker error when trying to use this function.

2.99.4:

2007-02-12  Murray Cumming  <murrayc@murrayc.com>

	* INSTALL: Added this file to svn.
	* Makefile.am: Always mention gda-sharp in SUBDIRS so that its contents can be included in 
	the dist.
	* gda-sharp/Makefile.am: Move the if conditional here from Makefile.am, but always dist the 
	sources, so they always appear in tarballs even if the person making the tarball does not have 
	mono.

2007-02-12 Daniel Espinosa <esodan@gmail.com>

    	* libgda/gda-query-field-value.c: Added the is_parameter property to GdaQueryFieldValue Object,
    	API change: gda_query_field_is_parameter to gda_query_field_get_is_parameter
    	* libgda/gda-entity-field.c: 
    	* libgda/gda-query-field-*:
    	Changed virtual reference from (*get_data_type) to (*get_dict_type)
    	* libgda/gda-query-field-value: Deleted a duplicated method gda_query_field_value_get_data_type and
    	gda_query_field_value_get_g_type, becouse this object implements GdaEntityField interface
    	* gda-sharp: API updates, added missing reference to libraries

2007-02-12  Johannes Schmid <johannes.schmid@openismus.com>

	* libgda/gda-parameter-list.c: (gda_parameter_list_set_property),
	(gda_parameter_list_get_property), (gda_parameter_list_class_init),
	(_gda_parameter_list_get_dict), (gda_parameter_list_new):
	* libgda/gda-parameter-list.h:
	
	Added a new construct property "params" to gda-parameter-list to allow wrapping with
	C++ and added a new private method to be able to do some initialisation.

2007-02-11  Brecht Sanders <brecht@edustria.be>

	* libgda/gda-data-model-import.c: (gda_data_model_import_dispose),
	(gda_data_model_import_set_property): Check for the G_OS_WIN32 #define 